--- a/src/app/pages/descargarproceso/descargarproceso.page.html
+++ b/src/app/pages/descargarproceso/descargarproceso.page.html
@@ -7,13 +7,13 @@
   <ion-header collapse="condense">
   </ion-header>  
     <div>
-    <ion-grid style="width: 100%; height:28vh">
+    <ion-grid style="width: 100%; height:20vh">
     <ion-item lines="none" style="--background:white; text-align: center;">
     <ion-title id="titulo">
     <ion-label>Descargar procesos</ion-label>
     </ion-title>
     </ion-item>
-    <ion-item lines="none" style="--background:white; text-align: center; margin-top: 40px;">
+    <ion-item lines="none" style="--background: transparent; text-align: center;">
       <p> Aquí podrás encontrar y descargar todos tus procesos quirúrgicos clasificados por operación realizada</p>
     </ion-item>
     </ion-grid>
