--- a/src/app/pages/draw-anatomye/draw-anatomye.page.html
+++ b/src/app/pages/draw-anatomye/draw-anatomye.page.html
@@ -1,13 +1,14 @@
-<ion-header *ngIf="disable">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+  <ion-buttons slot="start">
+    <ion-back-button defaultHref="/reportes" style="color:black" text=""></ion-back-button>
+ </ion-buttons>
+</ion-toolbar>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+  </ion-header> 
 <ion-content>
   <ion-grid>
-    <h2 class="title" *ngIf="disable">Selecciona el area que te duele</h2>
+    <h1 class="title" *ngIf="disable">Selecciona el area que te duele</h1>
   <h2 class="title" *ngIf="change">¿Esta es tu area afectada?</h2>
   <ion-card *ngIf="changeAnatomy" id="imgAnatomia">
     <img src="../../../assets/imagenes/Dibujo anatómico.png" alt="">
