--- a/src/app/pages/nuevoproceso/nuevoproceso.page.html
+++ b/src/app/pages/nuevoproceso/nuevoproceso.page.html
@@ -7,13 +7,11 @@
   <ion-header collapse="condense" style="--background-color: white;">
   </ion-header> 
   <div>
-    <ion-grid id="inicio" style="width: 100%; height:10vh;">
-      <ion-item lines="none" style="--background:white; text-align: center;">
+      <ion-item id="inicio"  lines="none" style="--background:white; text-align: center;">
         <ion-title id="titulo">
           <ion-label>Iniciar nuevo proceso</ion-label>
         </ion-title>
       </ion-item>
-    </ion-grid>
   </div>
 
   <ion-grid id="botones">
