--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -35,7 +35,7 @@
     </ion-col>
     <ion-col>
         <ion-button id="perfil" href='https://drive.google.com/file/d/1zWNyWbUF2gu01BXIXvmvWiizhc4y9rmX/view?usp=sharing'>
-          <img src="assets/imagenes/Project Manager.png"/>
+          <img src="assets/imagenes/Politica.png"/>
         </ion-button>
         <ion-item  lines="none" style="text-align:center;--background: #f1f5f8;">
         <ion-label style="font-size: 12px;">Políticas de privacidad</ion-label>
