--- a/src/app/pages/misprocesos/misprocesos.page.html
+++ b/src/app/pages/misprocesos/misprocesos.page.html
@@ -7,13 +7,13 @@
   <ion-header collapse="condense">
   </ion-header>  
     <div>
-    <ion-grid id="inicio" style="width: 100%; height:25vh">
+    <ion-grid id="inicio" style="width: 100%; height:20vh">
     <ion-item lines="none" style="--background:white; text-align: center;">
     <ion-title id="titulo">
     <ion-label>Mis Procesos</ion-label>
     </ion-title>
     </ion-item>
-    <ion-item lines="none" style="--background:white; text-align: center; margin-top: 40px;">
+    <ion-item lines="none" style="--background:transparent; text-align: center">
       <p>En PeriOpera tenemos una serie de recomendaciones de cuidado durante todo tu proceso, ¡sigue estos consejos!</p>
     </ion-item>
     </ion-grid>
