--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -21,7 +21,7 @@
     <ion-card button="true">
       <ion-item lines="none" style="padding:0px !important;" id="dos">
         <ion-thumbnail slot="end">
-          <img src="assets/imagenes/Process.png">
+          <img src="assets/imagenes/procesos.png">
         </ion-thumbnail>
         <h5>Mis procesos</h5>
       </ion-item>
@@ -29,7 +29,7 @@
     <ion-card button="true" (click)="nextPage()">
       <ion-item lines="none" style="padding:0px !important;" id="tres">
         <ion-thumbnail slot="end">
-          <img src="assets/imagenes/Headache.png">
+          <img src="assets/imagenes/Report.png">
         </ion-thumbnail>
         <h5>Reporte de síntomas</h5>
       </ion-item>
@@ -38,7 +38,7 @@
       <ion-icon  *ngIf="alertEneable" style="margin-left:80%;margin-top: 7px;background-color: rgb(255, 0, 76);border-radius:100% ;" name="sad-outline"></ion-icon>
       <ion-item lines="none" style="padding:0px !important;" id="cuatro" (click)=" nextPageAlerts()">
         <ion-thumbnail slot="end">
-          <img src="assets/imagenes/Google Alerts.png">
+          <img src="assets/imagenes/Alarma.png">
         </ion-thumbnail>
         <h5>Mis alertas</h5>
       </ion-item>
@@ -46,7 +46,7 @@
     <ion-card button="true">
       <ion-item lines="none" style="padding:0px !important;" id="cinco">
         <ion-thumbnail slot="end">
-          <img src="assets/imagenes/Downloads Folder.png">
+          <img src="assets/imagenes/Descargar.png">
         </ion-thumbnail>
         <h5>Descarga de procesos</h5>
       </ion-item>
