push intro, pantalla de carga y zonas wifi

--- a/src/app/pages/log-two/log-two.page.html
+++ b/src/app/pages/log-two/log-two.page.html
@@ -62,7 +62,7 @@
       <ion-input name="grup_etni" [(ngModel)]="registro.grup_etni" ></ion-input>
     </ion-item>
     <ion-item class="items">
-      <ion-label class="label" position="stacked">Grupo vunerable</ion-label>
+      <ion-label class="label" position="stacked">Grupo vulnerable</ion-label>
       <ion-input name="vunerable_person" [(ngModel)]="registro.vunerable_person" ></ion-input>
     </ion-item>
     <ion-item class="items">
