--- a/src/app/pages/carga/carga.page.html
+++ b/src/app/pages/carga/carga.page.html
@@ -25,7 +25,7 @@
 </ion-grid>
 <ion-grid>
   <ion-item lines= none style="--background: #F5F5F8; margin-top: 10px; text-align: center; font-size: 12px; color:#82799D; ">
-    <ion-label>Grupo de investigación Perioperatorio</ion-label>
+    <ion-label>Grupo de investigación Perioperatorio.</ion-label>
   </ion-item>
   <ion-item lines= none style="--background: #F5F5F8; margin-top: 10px; text-align: center;font-size: 12px; color:#82799D;margin-top: -10px">
     <ion-label>Grupo de investigación GINDESOFT.</ion-label>
