cambios de front

--- a/src/app/pages/draw-anatomye/draw-anatomye.page.html
+++ b/src/app/pages/draw-anatomye/draw-anatomye.page.html
@@ -1,6 +1,6 @@
 <ion-toolbar>
   <ion-buttons slot="start">
-    <ion-back-button defaultHref="/reportes" style="color:black" text=""></ion-back-button>
+    <ion-back-button defaultHref="/reportes" style="color:rgb(97, 40, 40)" text=""></ion-back-button>
  </ion-buttons>
 </ion-toolbar>
 <ion-content [fullscreen]="true">
