--- a/src/app/pages/lineatemporal/lineatemporal.page.html
+++ b/src/app/pages/lineatemporal/lineatemporal.page.html
@@ -18,8 +18,7 @@
         <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Linea sintomatologica</label>
       </ion-item>
-      <ion-item lines="none" style="padding:0px !important;" id="dos">
-        <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
+      <ion-item lines="none" style="padding:0px !important;" id="dos"(click)="routerClick('/proceso-completo')">
         <label>Linea de perioperatoria</label>
       </ion-item>
     </div>
