--- a/src/app/pages/nuevoproceso/nuevoproceso.page.html
+++ b/src/app/pages/nuevoproceso/nuevoproceso.page.html
@@ -22,49 +22,49 @@
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item  id="item" lines="none" style="padding:0px !important;"  id="dos">
+      <ion-item (click)=" descriptionStatus('Tengo un problema de salud y ya cuento con cita médica general','antes')" id="item" lines="none" style="padding:0px !important;"  id="dos">
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Tengo un problema de salud y ya cuento con cita médica general</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
+      <ion-item (click)=" descriptionStatus('Tuve cita con especialista','antes')"id="item" lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Tuve cita con especialista</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
+      <ion-item (click)=" descriptionStatus('Ya cuento con autorización para procedimiento quirúrgico','antes')" id="item" lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Ya cuento con autorización para procedimiento quirúrgico</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
+      <ion-item  (click)=" descriptionStatus('Ya me realizaron exámenes ordenados por especialista','antes')" id="item" lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Ya me realizaron exámenes ordenados por especialista</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
+      <ion-item (click)=" descriptionStatus('Ya firmé el consentimiento informado','antes')" id="item" lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Ya firmé el consentimiento informado</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
+      <ion-item (click)=" descriptionStatus('Ya tuve cita con el anestesiólogo','antes')" id="item" lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Ya tuve cita con el anestesiólogo </label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
+      <ion-item (click)=" descriptionStatus('Ya recibí el procedimiento / La cirugia','despues')" id="item" lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Ya recibí el procedimiento / La cirugia</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
+      <ion-item (click)=" descriptionStatus('Ya tuve consulta de control después de mi cirugía','despues')"id="item" lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Ya tuve consulta de control después de mi cirugía</label>
       </ion-item>
