--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,7 +11,7 @@
   </ion-item>
   <ion-grid>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;" id="uno">
+      <ion-item lines="none" style="padding:0px !important;" id="uno" (click)="routerClick('/nuevoproceso')">
         <ion-thumbnail slot="end">
           <img src="assets/imagenes/Puzzle.png">
         </ion-thumbnail>
