--- a/src/app/pages/nuevoproceso/nuevoproceso.page.html
+++ b/src/app/pages/nuevoproceso/nuevoproceso.page.html
@@ -16,7 +16,7 @@
 
   <ion-grid id="botones">
     <ion-card button="true">
-      <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
+      <ion-item (click)="routerClick('/draw-anatomye')" id="item" lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Me siento mal / enfermo y no cuento con cita médica</label>
       </ion-item>
