--- a/src/app/pages/reporte-fechas/reporte-fechas.page.html
+++ b/src/app/pages/reporte-fechas/reporte-fechas.page.html
@@ -16,6 +16,6 @@
                   </ion-item>
           
         </ion-row>
-        <ion-button (click)="addDate()" id="buttonI" >Registrar fecha</ion-button>
+        <ion-button (click)="showPromptAlert()" id="buttonI" >Registrar fecha</ion-button>
     </ion-grid>
 </ion-content>
