--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -46,7 +46,7 @@
     <ion-card button="true">
       <ion-item lines="none" style="padding:0px !important;" id="cinco" (click)="routerClick('/lineatemporal')">
         <ion-thumbnail slot="end">
-          <img src="assets/imagenes/Report.png">
+          <img src="assets/imagenes/management.png">
         </ion-thumbnail>
         <h5>Linea de procesos</h5>
       </ion-item>
