--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -34,7 +34,7 @@
         </ion-item>
     </ion-col>
     <ion-col>
-        <ion-button id="perfil" href='https://drive.google.com/file/d/1zWNyWbUF2gu01BXIXvmvWiizhc4y9rmX/view?usp=sharing'>
+        <ion-button id="perfil" href='https://drive.google.com/file/d/1yyqZjuk4dBmiEVgFrt_SDzjLN2oX78r1/view'>
           <img src="assets/imagenes/Politica.png"/>
         </ion-button>
         <ion-item  lines="none" style="text-align:center;--background: #f1f5f8;">
