--- a/src/app/pages/mapaconectividad/mapaconectividad.page.html
+++ b/src/app/pages/mapaconectividad/mapaconectividad.page.html
@@ -8,7 +8,7 @@
   </ion-header>  
     <ion-slides style="margin-top: -50px;">
       <ion-slide>
-          <img src="assets/imagenes/internet.jpg" style="max-width: 100% ; max-height: 100%"/>
+          <img src="assets/imagenes/Puntos 1.png" style="max-width: 100% ; max-height: 100%"/>
           <h2 style="margin-top: -30px; text-align: center;">Puntos de Conectividad en Soacha</h2>
           <p>En esta sección encontrarás las zonas disponibles con wi-fi gratuito.</p>
          <p>Desliza para continuar<ion-icon slot="end" name="arrow-forward"></ion-icon></p>
