--- a/src/app/pages/misprocesos/misprocesos.page.html
+++ b/src/app/pages/misprocesos/misprocesos.page.html
@@ -38,7 +38,7 @@
           <label>Después de la operación</label>
         </ion-item>
       </ion-card>
-      <ion-card button="true">
+      <ion-card  (click)="routerClick('/proceso-completo')" button="true">
         <ion-item id="item" lines="none" style="padding:0px !important;" id="uno"> 
             <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
           <label>Ver mi proceso completo</label>
