--- a/src/app/pages/tutorial/tutorial.page.html
+++ b/src/app/pages/tutorial/tutorial.page.html
@@ -25,7 +25,7 @@
     <ion-slide>
       <img src="assets/imagenes/hombresentado.png" />
       <h2 style="margin-top: 63px;">¡Comencemos!</h2>
-      <ion-button fill="clear">Entrar a PeriOpera <ion-icon slot="end" name="arrow-forward"></ion-icon></ion-button>
+      <ion-button (click)="routerClick('login/log-one')" fill="clear">Entrar a PeriOpera <ion-icon slot="end" name="arrow-forward"></ion-icon></ion-button>
     </ion-slide>
   </ion-slides>
 </ion-content>
