--- a/src/app/componets/alert-users/alert-users.component.html
+++ b/src/app/componets/alert-users/alert-users.component.html
@@ -22,7 +22,7 @@
       </thead>
       <tbody>
         <tr *ngFor=" let item of dataAlerts;let i= index">
-          <th scope="row">1</th>
+          <th scope="row">{{i+1}}</th>
           <td>{{item.data}}</td>
           <td><p *ngFor="let alerts of item.symptons; let k = index">{{alerts.simptons}}</p></td>
           <td>{{item.create.slice(0,-14)}}</td>
